Fixed font on banners overlapping navbar, and changed front to look less ugly

--- a/frontend/src/pages/DirectAirCapture/DirectAirCapture.css
+++ b/frontend/src/pages/DirectAirCapture/DirectAirCapture.css
@@ -16,8 +16,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    -webkit-text-stroke: .4px black;
-
+    -webkit-text-stroke: 1px black;
+    font-family: Verdana, Geneva, sans-serif; font-size: 24px; font-style: normal; 
 }
 
 .dac-banner-text>p {
@@ -26,7 +26,7 @@
 
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 1200px) {
     .dac-banner-text>p {
         display: none;
     }
