--- a/frontend/src/pages/KelpFarms/KelpFarms.css
+++ b/frontend/src/pages/KelpFarms/KelpFarms.css
@@ -16,7 +16,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    -webkit-text-stroke: .4px black;
+    -webkit-text-stroke: 1px black;
+    font-family: Verdana, Geneva, sans-serif; font-size: 24px; font-style: normal; 
+
 }
 
 .kelpfarms-banner-text>p {
@@ -24,7 +26,7 @@
     font-weight: 700;
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 1200px) {
     .kelpfarms-banner-text>p {
         display: none;
     }
